# 12-Steps-To-NS

./: .bazelrc  .clang-format  .clang-tidy  README.md  WORKSPACE  compile_commands.json  inputs  plotCData.py
.github/workflows/: main_ci.yml
C/: Makefile  Step3.c  Step4.c
C++/: Step1.c  Step2.c
C++/data_types/: BUILD  grid.cpp  grid.h  grid_generator.cpp  grid_generator.h  spatial_variable.cpp  spatial_variable.h  time_variable.cpp  time_variable.h
C++/data_types/test/: BUILD  grid_test.cpp  grid_tests.cpp  spatial_variable_tests.cpp
C++/operators/: BUILD.bazel  gradient.h  laplace.cpp  laplace.h
C++/operators/test/: BUILD.bazel  laplace_operator_tests.cpp
C++/src/: BUILD  step_1.cpp  step_1.json
C++/steps/: 1d_diffusion.cpp  BUILD.bazel
C++/utilities/: BUILD  grid_generator.cpp  grid_generator.h
C++/utilities/test/: BUILD  grid_tests.cpp
toolchain/: BUILD  cc_toolchain_config.bzl
